--- a/DNS-Performance-Tracker/Makefile
+++ b/DNS-Performance-Tracker/Makefile
@@ -1,7 +1,8 @@
 CXX = g++
+LIBS = -I/usr/include/mysql++ -I/usr/include/mysql -lmysqlpp -lldns
  
 all: 
-	$(CXX) --std=c++11 *.cpp -o dpt
+	$(CXX) --std=c++11 *.cpp -o dpt $(LIBS)
 
 clean:
 	rm dpt
