added multi-threading in processing dns queries

--- a/DNS-Performance-Tracker/Makefile
+++ b/DNS-Performance-Tracker/Makefile
@@ -1,5 +1,5 @@
 CXX = g++
-LIBS = -I/usr/include/mysql++ -I/usr/include/mysql -lmysqlpp -lldns
+LIBS = -I/usr/include/mysql++ -I/usr/include/mysql -lmysqlpp -lldns -lboost_system -lboost_thread
  
 all: 
 	$(CXX) --std=c++11 *.cpp -o dpt $(LIBS)
